--- a/Volcano_data/codes/pathway_intersection.ipynb
+++ b/Volcano_data/codes/pathway_intersection.ipynb
@@ -12,16 +12,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge the signature files - upsig, downsig, and sig\n",
+    "folder_path = \"../Volcano_sig/\"\n",
+    "\n",
+    "def preprocess(group):\n",
+    "    csv_files = [file for file in os.listdir(folder_path) if file.endswith(f\"_{group}sig.csv\")]\n",
+    "\n",
+    "    dfs = []\n",
+    "    for file in csv_files:\n",
+    "        df = pd.read_csv(os.path.join(folder_path, file), header=None)\n",
+    "        if df.shape[1] == 9:\n",
+    "            df = df.iloc[:, 1:]\n",
+    "        dfs.append(df)\n",
+    "\n",
+    "    merged_df = pd.concat(dfs, ignore_index=True)\n",
+    "    merged_df = merged_df.rename(columns=merged_df.iloc[0])\n",
+    "    merged_df = merged_df[1:]\n",
+    "\n",
+    "    merged_df.dropna(how='all', inplace=True)\n",
+    "    merged_df = merged_df[merged_df['Gene names'] != 'unkown'].reset_index(drop=True)\n",
+    "\n",
+    "    # Select rows with padj < 0.1\n",
+    "    merged_df['padj'] = pd.to_numeric(merged_df['padj'], errors='coerce').dropna()\n",
+    "    merged_df = merged_df[merged_df['padj'] < 0.1].reset_index(drop=True)\n",
+    "    # return merged_df.head()\n",
+    "\n",
+    "    # For common gene names, keep only that gene which have lower padj\n",
+    "    sorted_df = merged_df.sort_values(by='padj', ascending=True)\n",
+    "    final_df = sorted_df.drop_duplicates(subset='Gene names', keep='first').reset_index(drop=True)\n",
+    "    final_df.to_csv(folder_path + f'merged_{group}sig.csv', index=False)\n",
+    "    return final_df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(11576, 8)\n"
+      "_upsig.csv\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "group = 'up'\n",
+    "print(f\"_{group}sig.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -56,58 +105,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>ENSRNOG00000001295</td>\n",
-       "      <td>S100b</td>\n",
-       "      <td>105.7232384</td>\n",
-       "      <td>-3.425173602</td>\n",
-       "      <td>0.208743533</td>\n",
-       "      <td>-16.40852558</td>\n",
-       "      <td>1.66e-60</td>\n",
-       "      <td>4.11e-58</td>\n",
+       "      <td>ENSRNOG00000003259</td>\n",
+       "      <td>C1qtnf1</td>\n",
+       "      <td>971.5327586</td>\n",
+       "      <td>5.507036853</td>\n",
+       "      <td>0.097672895</td>\n",
+       "      <td>56.38244704</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>ENSRNOG00000002548</td>\n",
-       "      <td>Tnn</td>\n",
-       "      <td>7886.529183</td>\n",
-       "      <td>-2.032985031</td>\n",
-       "      <td>0.079591216</td>\n",
-       "      <td>-25.54283167</td>\n",
-       "      <td>6.6e-144</td>\n",
-       "      <td>1.24e-140</td>\n",
+       "      <td>ENSRNOG00000014030</td>\n",
+       "      <td>Synm</td>\n",
+       "      <td>813.8761217</td>\n",
+       "      <td>4.862897706</td>\n",
+       "      <td>0.109039125</td>\n",
+       "      <td>44.59773215</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>ENSRNOG00000004610</td>\n",
-       "      <td>Lum</td>\n",
-       "      <td>7.4094046</td>\n",
-       "      <td>-3.402795687</td>\n",
-       "      <td>1.358152498</td>\n",
-       "      <td>-2.505459212</td>\n",
-       "      <td>0.01222925</td>\n",
-       "      <td>0.041806492</td>\n",
+       "      <td>ENSRNOG00000056135</td>\n",
+       "      <td>Tsc22d3</td>\n",
+       "      <td>7421.822271</td>\n",
+       "      <td>4.166756105</td>\n",
+       "      <td>0.052765185</td>\n",
+       "      <td>78.96790417</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>ENSRNOG00000007057</td>\n",
-       "      <td>Csmd2</td>\n",
-       "      <td>11.75956704</td>\n",
-       "      <td>-3.821435752</td>\n",
-       "      <td>1.297475289</td>\n",
-       "      <td>-2.945285961</td>\n",
-       "      <td>0.003226563</td>\n",
-       "      <td>0.013857026</td>\n",
+       "      <td>ENSRNOG00000056153</td>\n",
+       "      <td>Tent5b</td>\n",
+       "      <td>965.6281874</td>\n",
+       "      <td>5.323521085</td>\n",
+       "      <td>0.10757162</td>\n",
+       "      <td>49.48815562</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>ENSRNOG00000007765</td>\n",
-       "      <td>Frzb</td>\n",
-       "      <td>17.77693969</td>\n",
-       "      <td>-3.113430242</td>\n",
-       "      <td>0.551118964</td>\n",
-       "      <td>-5.649288895</td>\n",
-       "      <td>1.61e-08</td>\n",
-       "      <td>2.11e-07</td>\n",
+       "      <td>ENSRNOG00000057713</td>\n",
+       "      <td>Cav2</td>\n",
+       "      <td>2234.732351</td>\n",
+       "      <td>2.451718574</td>\n",
+       "      <td>0.050287633</td>\n",
+       "      <td>48.7539073</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -115,29 +164,160 @@
       ],
       "text/plain": [
        "           ENSEMBL ID Gene names     baseMean log2FoldChange        lfcSE  \\\n",
-       "0  ENSRNOG00000001295      S100b  105.7232384   -3.425173602  0.208743533   \n",
-       "1  ENSRNOG00000002548        Tnn  7886.529183   -2.032985031  0.079591216   \n",
-       "2  ENSRNOG00000004610        Lum    7.4094046   -3.402795687  1.358152498   \n",
-       "3  ENSRNOG00000007057      Csmd2  11.75956704   -3.821435752  1.297475289   \n",
-       "4  ENSRNOG00000007765       Frzb  17.77693969   -3.113430242  0.551118964   \n",
+       "0  ENSRNOG00000003259    C1qtnf1  971.5327586    5.507036853  0.097672895   \n",
+       "1  ENSRNOG00000014030       Synm  813.8761217    4.862897706  0.109039125   \n",
+       "2  ENSRNOG00000056135    Tsc22d3  7421.822271    4.166756105  0.052765185   \n",
+       "3  ENSRNOG00000056153     Tent5b  965.6281874    5.323521085   0.10757162   \n",
+       "4  ENSRNOG00000057713       Cav2  2234.732351    2.451718574  0.050287633   \n",
        "\n",
-       "           stat       pvalue         padj  \n",
-       "0  -16.40852558     1.66e-60     4.11e-58  \n",
-       "1  -25.54283167     6.6e-144    1.24e-140  \n",
-       "2  -2.505459212   0.01222925  0.041806492  \n",
-       "3  -2.945285961  0.003226563  0.013857026  \n",
-       "4  -5.649288895     1.61e-08     2.11e-07  "
+       "          stat pvalue  padj  \n",
+       "0  56.38244704      0   0.0  \n",
+       "1  44.59773215      0   0.0  \n",
+       "2  78.96790417      0   0.0  \n",
+       "3  49.48815562      0   0.0  \n",
+       "4   48.7539073      0   0.0  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Merge all the signature files\n",
+    "# preprocess('up')\n",
+    "# preprocess('down')\n",
+    "preprocess('')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7146, 8)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gene names</th>\n",
+       "      <th>baseMean</th>\n",
+       "      <th>log2FoldChange</th>\n",
+       "      <th>lfcSE</th>\n",
+       "      <th>stat</th>\n",
+       "      <th>pvalue</th>\n",
+       "      <th>padj</th>\n",
+       "      <th>NaN</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Cmklr1</td>\n",
+       "      <td>1565.34994</td>\n",
+       "      <td>3.300235052</td>\n",
+       "      <td>0.073543399</td>\n",
+       "      <td>44.87466029</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ENSRNOG00000015505</td>\n",
+       "      <td>Mfap5</td>\n",
+       "      <td>4309.548805</td>\n",
+       "      <td>2.770010421</td>\n",
+       "      <td>0.063649612</td>\n",
+       "      <td>43.51967471</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ENSRNOG00000015880</td>\n",
+       "      <td>Dpep1</td>\n",
+       "      <td>913.9645792</td>\n",
+       "      <td>6.224471074</td>\n",
+       "      <td>0.128376994</td>\n",
+       "      <td>48.48587654</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ENSRNOG00000015904</td>\n",
+       "      <td>Wfdc1</td>\n",
+       "      <td>2847.047061</td>\n",
+       "      <td>2.070765053</td>\n",
+       "      <td>0.051844675</td>\n",
+       "      <td>39.94171168</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ENSRNOG00000016021</td>\n",
+       "      <td>Lims2</td>\n",
+       "      <td>1474.010362</td>\n",
+       "      <td>3.104012812</td>\n",
+       "      <td>0.064358283</td>\n",
+       "      <td>48.23019939</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Gene names    baseMean log2FoldChange        lfcSE         stat  \\\n",
+       "0              Cmklr1  1565.34994    3.300235052  0.073543399  44.87466029   \n",
+       "1  ENSRNOG00000015505       Mfap5    4309.548805  2.770010421  0.063649612   \n",
+       "2  ENSRNOG00000015880       Dpep1    913.9645792  6.224471074  0.128376994   \n",
+       "3  ENSRNOG00000015904       Wfdc1    2847.047061  2.070765053  0.051844675   \n",
+       "4  ENSRNOG00000016021       Lims2    1474.010362  3.104012812  0.064358283   \n",
+       "\n",
+       "        pvalue padj  NaN  \n",
+       "0            0  0.0  NaN  \n",
+       "1  43.51967471  0.0  0.0  \n",
+       "2  48.48587654  0.0  0.0  \n",
+       "3  39.94171168  0.0  0.0  \n",
+       "4  48.23019939  0.0  0.0  "
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Merge the signature files - upsig, downsig, and sig\n",
     "folder_path = \"../Volcano_sig/\"\n",
-    "csv_files = [file for file in os.listdir(folder_path) if file.endswith(\".csv\")]\n",
+    "\n",
+    "csv_files = [file for file in os.listdir(folder_path) if file.endswith(\"upsig.csv\")]\n",
     "\n",
     "dfs = []\n",
     "for file in csv_files:\n",
