Converted to .tsv files

--- a/codes/preprocess.ipynb
+++ b/codes/preprocess.ipynb
@@ -452,7 +452,7 @@
     "for imp in implants:\n",
     "    df_imp = df_transposed[df_transposed.index.str.contains(imp)]\n",
     "    df_imp.columns = df_transposed.iloc[0]\n",
-    "    df_imp.to_csv(f'../data/countdata_{imp}.csv', index=False)"
+    "    df_imp.to_csv(f'../data/countdata_{imp}.tsv', sep='\\t', index=False)"
    ]
   }
  ],
