--- a/Volcano_data/codes/filtered_genes.ipynb
+++ b/Volcano_data/codes/filtered_genes.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -171,18 +171,9 @@
       "No of rows: 302\n",
       "No of rows: 262\n",
       "No of rows: 347\n",
-      "No of rows: 454\n"
+      "No of rows: 454\n",
+      "37\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "37"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -197,9 +188,407 @@
     "    gene_list = tf_filter(df)\n",
     "    gene_list_all.append(set(gene_list))\n",
     "\n",
+    "# gene_list_union = set.union(*gene_list_all)\n",
     "gene_list_intersection = set.intersection(*gene_list_all)\n",
     "\n",
-    "len(gene_list_intersection)"
+    "print(len(gene_list_intersection))\n",
+    "# list(gene_list_intersection)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>TCPS.1</th>\n",
+       "      <th>TCPS.2</th>\n",
+       "      <th>TCPS.3</th>\n",
+       "      <th>OM.1</th>\n",
+       "      <th>OM.2</th>\n",
+       "      <th>OM.3</th>\n",
+       "      <th>BMP2.1</th>\n",
+       "      <th>BMP2.2</th>\n",
+       "      <th>BMP2.3</th>\n",
+       "      <th>PT.1</th>\n",
+       "      <th>PT.2</th>\n",
+       "      <th>PT.3</th>\n",
+       "      <th>mSLA.1</th>\n",
+       "      <th>mSLA.2</th>\n",
+       "      <th>mSLA.3</th>\n",
+       "      <th>Titan.1</th>\n",
+       "      <th>Titan.2</th>\n",
+       "      <th>Titan.3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ENSRNOG00000046319</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ENSRNOG00000050370</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ENSRNOG00000040300</td>\n",
+       "      <td>10</td>\n",
+       "      <td>11</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>12</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>10</td>\n",
+       "      <td>17</td>\n",
+       "      <td>12</td>\n",
+       "      <td>24</td>\n",
+       "      <td>13</td>\n",
+       "      <td>31</td>\n",
+       "      <td>46</td>\n",
+       "      <td>52</td>\n",
+       "      <td>27</td>\n",
+       "      <td>45</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ENSRNOG00000058808</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ENSRNOG00000061316</td>\n",
+       "      <td>834</td>\n",
+       "      <td>963</td>\n",
+       "      <td>894</td>\n",
+       "      <td>619</td>\n",
+       "      <td>598</td>\n",
+       "      <td>630</td>\n",
+       "      <td>1058</td>\n",
+       "      <td>839</td>\n",
+       "      <td>962</td>\n",
+       "      <td>1409</td>\n",
+       "      <td>1436</td>\n",
+       "      <td>844</td>\n",
+       "      <td>2364</td>\n",
+       "      <td>2237</td>\n",
+       "      <td>2736</td>\n",
+       "      <td>3461</td>\n",
+       "      <td>4492</td>\n",
+       "      <td>3960</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   ID  TCPS.1  TCPS.2  TCPS.3  OM.1  OM.2  OM.3  BMP2.1  \\\n",
+       "0  ENSRNOG00000046319       1       0       0     0     0     0       0   \n",
+       "1  ENSRNOG00000050370       0       0       0     0     0     0       0   \n",
+       "2  ENSRNOG00000040300      10      11      10    10    12     7       6   \n",
+       "3  ENSRNOG00000058808       0       0       0     0     0     0       0   \n",
+       "4  ENSRNOG00000061316     834     963     894   619   598   630    1058   \n",
+       "\n",
+       "   BMP2.2  BMP2.3  PT.1  PT.2  PT.3  mSLA.1  mSLA.2  mSLA.3  Titan.1  Titan.2  \\\n",
+       "0       1       0     0     0     0       0       0       0        0        0   \n",
+       "1       0       0     0     0     0       0       0       0        0        1   \n",
+       "2      10      17    12    24    13      31      46      52       27       45   \n",
+       "3       0       0     0     0     0       0       0       0        0        1   \n",
+       "4     839     962  1409  1436   844    2364    2237    2736     3461     4492   \n",
+       "\n",
+       "   Titan.3  \n",
+       "0        0  \n",
+       "1        0  \n",
+       "2       42  \n",
+       "3        0  \n",
+       "4     3960  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load the all-count file\n",
+    "\n",
+    "df_all_count = pd.read_csv('../../data/A_FullClean_CountData.csv')\n",
+    "df_all_count.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>TCPS.1</th>\n",
+       "      <th>TCPS.2</th>\n",
+       "      <th>TCPS.3</th>\n",
+       "      <th>OM.1</th>\n",
+       "      <th>OM.2</th>\n",
+       "      <th>OM.3</th>\n",
+       "      <th>BMP2.1</th>\n",
+       "      <th>BMP2.2</th>\n",
+       "      <th>BMP2.3</th>\n",
+       "      <th>PT.1</th>\n",
+       "      <th>PT.2</th>\n",
+       "      <th>PT.3</th>\n",
+       "      <th>mSLA.1</th>\n",
+       "      <th>mSLA.2</th>\n",
+       "      <th>mSLA.3</th>\n",
+       "      <th>Titan.1</th>\n",
+       "      <th>Titan.2</th>\n",
+       "      <th>Titan.3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>699</th>\n",
+       "      <td>ENSRNOG00000020426</td>\n",
+       "      <td>4258</td>\n",
+       "      <td>4973</td>\n",
+       "      <td>4691</td>\n",
+       "      <td>2346</td>\n",
+       "      <td>2164</td>\n",
+       "      <td>2520</td>\n",
+       "      <td>5947</td>\n",
+       "      <td>4859</td>\n",
+       "      <td>5887</td>\n",
+       "      <td>4879</td>\n",
+       "      <td>5028</td>\n",
+       "      <td>3065</td>\n",
+       "      <td>4716</td>\n",
+       "      <td>4793</td>\n",
+       "      <td>4915</td>\n",
+       "      <td>3892</td>\n",
+       "      <td>4255</td>\n",
+       "      <td>4384</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>856</th>\n",
+       "      <td>ENSRNOG00000020762</td>\n",
+       "      <td>5652</td>\n",
+       "      <td>6572</td>\n",
+       "      <td>6561</td>\n",
+       "      <td>4952</td>\n",
+       "      <td>4756</td>\n",
+       "      <td>5301</td>\n",
+       "      <td>5876</td>\n",
+       "      <td>5026</td>\n",
+       "      <td>5887</td>\n",
+       "      <td>5340</td>\n",
+       "      <td>5842</td>\n",
+       "      <td>3488</td>\n",
+       "      <td>4885</td>\n",
+       "      <td>4539</td>\n",
+       "      <td>5186</td>\n",
+       "      <td>4260</td>\n",
+       "      <td>4768</td>\n",
+       "      <td>4698</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1173</th>\n",
+       "      <td>ENSRNOG00000022537</td>\n",
+       "      <td>118</td>\n",
+       "      <td>97</td>\n",
+       "      <td>106</td>\n",
+       "      <td>74</td>\n",
+       "      <td>49</td>\n",
+       "      <td>78</td>\n",
+       "      <td>134</td>\n",
+       "      <td>117</td>\n",
+       "      <td>154</td>\n",
+       "      <td>286</td>\n",
+       "      <td>260</td>\n",
+       "      <td>162</td>\n",
+       "      <td>436</td>\n",
+       "      <td>427</td>\n",
+       "      <td>484</td>\n",
+       "      <td>646</td>\n",
+       "      <td>920</td>\n",
+       "      <td>770</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1383</th>\n",
+       "      <td>ENSRNOG00000013017</td>\n",
+       "      <td>197</td>\n",
+       "      <td>227</td>\n",
+       "      <td>215</td>\n",
+       "      <td>1093</td>\n",
+       "      <td>1040</td>\n",
+       "      <td>1146</td>\n",
+       "      <td>185</td>\n",
+       "      <td>178</td>\n",
+       "      <td>197</td>\n",
+       "      <td>181</td>\n",
+       "      <td>198</td>\n",
+       "      <td>117</td>\n",
+       "      <td>143</td>\n",
+       "      <td>110</td>\n",
+       "      <td>137</td>\n",
+       "      <td>66</td>\n",
+       "      <td>89</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2218</th>\n",
+       "      <td>ENSRNOG00000020552</td>\n",
+       "      <td>800</td>\n",
+       "      <td>989</td>\n",
+       "      <td>863</td>\n",
+       "      <td>517</td>\n",
+       "      <td>507</td>\n",
+       "      <td>596</td>\n",
+       "      <td>826</td>\n",
+       "      <td>677</td>\n",
+       "      <td>825</td>\n",
+       "      <td>1686</td>\n",
+       "      <td>1575</td>\n",
+       "      <td>828</td>\n",
+       "      <td>2617</td>\n",
+       "      <td>2612</td>\n",
+       "      <td>2750</td>\n",
+       "      <td>5504</td>\n",
+       "      <td>6071</td>\n",
+       "      <td>5855</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      ID  TCPS.1  TCPS.2  TCPS.3  OM.1  OM.2  OM.3  BMP2.1  \\\n",
+       "699   ENSRNOG00000020426    4258    4973    4691  2346  2164  2520    5947   \n",
+       "856   ENSRNOG00000020762    5652    6572    6561  4952  4756  5301    5876   \n",
+       "1173  ENSRNOG00000022537     118      97     106    74    49    78     134   \n",
+       "1383  ENSRNOG00000013017     197     227     215  1093  1040  1146     185   \n",
+       "2218  ENSRNOG00000020552     800     989     863   517   507   596     826   \n",
+       "\n",
+       "      BMP2.2  BMP2.3  PT.1  PT.2  PT.3  mSLA.1  mSLA.2  mSLA.3  Titan.1  \\\n",
+       "699     4859    5887  4879  5028  3065    4716    4793    4915     3892   \n",
+       "856     5026    5887  5340  5842  3488    4885    4539    5186     4260   \n",
+       "1173     117     154   286   260   162     436     427     484      646   \n",
+       "1383     178     197   181   198   117     143     110     137       66   \n",
+       "2218     677     825  1686  1575   828    2617    2612    2750     5504   \n",
+       "\n",
+       "      Titan.2  Titan.3  \n",
+       "699      4255     4384  \n",
+       "856      4768     4698  \n",
+       "1173      920      770  \n",
+       "1383       89       72  \n",
+       "2218     6071     5855  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Filter the all-count dataframe based on gene list intersection\n",
+    "\n",
+    "df_all_count = df_all_count[df_all_count['ID'].isin(gene_list_intersection)]\n",
+    "# df_all_count.to_csv('../../data/CountData_TF_union.csv', index=False)\n",
+    "df_all_count.to_csv('../../data/CountData_TF_intersection.csv', index=False)\n",
+    "df_all_count.head()"
    ]
   }
  ],
