--- a/codes/preprocess.ipynb
+++ b/codes/preprocess.ipynb
@@ -11,197 +11,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>TCPS.1</th>\n",
-       "      <th>TCPS.2</th>\n",
-       "      <th>TCPS.3</th>\n",
-       "      <th>OM.1</th>\n",
-       "      <th>OM.2</th>\n",
-       "      <th>OM.3</th>\n",
-       "      <th>BMP2.1</th>\n",
-       "      <th>BMP2.2</th>\n",
-       "      <th>BMP2.3</th>\n",
-       "      <th>PT.1</th>\n",
-       "      <th>PT.2</th>\n",
-       "      <th>PT.3</th>\n",
-       "      <th>mSLA.1</th>\n",
-       "      <th>mSLA.2</th>\n",
-       "      <th>mSLA.3</th>\n",
-       "      <th>Titan.1</th>\n",
-       "      <th>Titan.2</th>\n",
-       "      <th>Titan.3</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ENSRNOG00000046319</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ENSRNOG00000050370</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ENSRNOG00000040300</td>\n",
-       "      <td>10</td>\n",
-       "      <td>11</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "      <td>12</td>\n",
-       "      <td>7</td>\n",
-       "      <td>6</td>\n",
-       "      <td>10</td>\n",
-       "      <td>17</td>\n",
-       "      <td>12</td>\n",
-       "      <td>24</td>\n",
-       "      <td>13</td>\n",
-       "      <td>31</td>\n",
-       "      <td>46</td>\n",
-       "      <td>52</td>\n",
-       "      <td>27</td>\n",
-       "      <td>45</td>\n",
-       "      <td>42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ENSRNOG00000058808</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ENSRNOG00000061316</td>\n",
-       "      <td>834</td>\n",
-       "      <td>963</td>\n",
-       "      <td>894</td>\n",
-       "      <td>619</td>\n",
-       "      <td>598</td>\n",
-       "      <td>630</td>\n",
-       "      <td>1058</td>\n",
-       "      <td>839</td>\n",
-       "      <td>962</td>\n",
-       "      <td>1409</td>\n",
-       "      <td>1436</td>\n",
-       "      <td>844</td>\n",
-       "      <td>2364</td>\n",
-       "      <td>2237</td>\n",
-       "      <td>2736</td>\n",
-       "      <td>3461</td>\n",
-       "      <td>4492</td>\n",
-       "      <td>3960</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                   ID  TCPS.1  TCPS.2  TCPS.3  OM.1  OM.2  OM.3  BMP2.1  \\\n",
-       "0  ENSRNOG00000046319       1       0       0     0     0     0       0   \n",
-       "1  ENSRNOG00000050370       0       0       0     0     0     0       0   \n",
-       "2  ENSRNOG00000040300      10      11      10    10    12     7       6   \n",
-       "3  ENSRNOG00000058808       0       0       0     0     0     0       0   \n",
-       "4  ENSRNOG00000061316     834     963     894   619   598   630    1058   \n",
-       "\n",
-       "   BMP2.2  BMP2.3  PT.1  PT.2  PT.3  mSLA.1  mSLA.2  mSLA.3  Titan.1  Titan.2  \\\n",
-       "0       1       0     0     0     0       0       0       0        0        0   \n",
-       "1       0       0     0     0     0       0       0       0        0        1   \n",
-       "2      10      17    12    24    13      31      46      52       27       45   \n",
-       "3       0       0     0     0     0       0       0       0        0        1   \n",
-       "4     839     962  1409  1436   844    2364    2237    2736     3461     4492   \n",
-       "\n",
-       "   Titan.3  \n",
-       "0        0  \n",
-       "1        0  \n",
-       "2       42  \n",
-       "3        0  \n",
-       "4     3960  "
+       "(23148, 19)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv('../data/A_FullClean_CountData.csv')\n",
-    "df.head()"
+    "df.shape"
    ]
   },
   {
@@ -472,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
