--- a/Volcano_data/codes/filtered_genes.ipynb
+++ b/Volcano_data/codes/filtered_genes.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "4                       ENSRNOP00000011743.1;      64571.0  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        "[1232 rows x 19 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
        "[943 rows x 8 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,18 +769,19 @@
     "        merged_df = pd.concat([merged_df, df])\n",
     "\n",
     "    merged_df.reset_index(drop=True, inplace=True)\n",
+    "    merged_df.to_csv(f'../../data/{implant}_merged.csv', index=False)\n",
     "    set_implant = set(merged_df['ENSEMBL ID'])\n",
     "    tf_all = df_tffile[df_tffile['Ensembl'].isin(df_all_counts['ID'])]\n",
     "    # tf_all = df_tffile[df_tffile['Ensembl'].isin(set_implant)]\n",
     "    final_implant = set_implant.union(tf_all['Ensembl'])\n",
     "    count_implant = pd.read_csv(f'../../data/countdata_{implant}.csv')\n",
-    "    count_implant_sig = count_implant.loc[:, count_mSLA.columns.isin(final_implant)]\n",
+    "    count_implant_sig = count_implant.loc[:, count_implant.columns.isin(final_implant)]\n",
     "    count_implant_sig.to_csv(f'../../data/input_{implant}.tsv', sep='\\t', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
