--- a/Volcano_data/codes/miRsig_preprocessing.ipynb
+++ b/Volcano_data/codes/miRsig_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
        " 'Titan_network.tsv']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
    "source": [
     "path = \"D:/scRNA-Seq_data/final_schwartz_networks/\"\n",
     "\n",
-    "files = [file for file in os.listdir(path)]\n",
+    "files = [file for file in os.listdir(path) if file.endswith('network.tsv')]\n",
     "files"
    ]
   },
